author edit mode

--- a/src/assets/i18n/components/button/en.json
+++ b/src/assets/i18n/components/button/en.json
@@ -56,7 +56,7 @@
   "deleteArticle": "Delete article",
   "deleteArticlePosted": "Delete article from posted",
   "postArticle": "Post article",
-  "closeEditMode": "Close edit article mode",
+  "closeEditMode": "Close edit mode",
   "createAuthor": "Create author",
   "authors": "Authors",
   "certifications": "Certifications",
