--- a/src/assets/i18n/components/button/pl.json
+++ b/src/assets/i18n/components/button/pl.json
@@ -56,7 +56,7 @@
   "deleteArticle": "Usuń artykuł",
   "deleteArticlePosted": "Usuń artykuł z opublikowanego",
   "postArticle": "Opublikuj artykuł",
-  "closeEditMode": "Zamknij tryb edycji artykułu",
+  "closeEditMode": "Zamknij tryb edycji",
   "createAuthor": "Utwórz autora",
   "authors": "Autorzy",
   "certifications": "Certyfikaty",
