--- a/src/assets/i18n/components/input/en.json
+++ b/src/assets/i18n/components/input/en.json
@@ -89,9 +89,9 @@
   "authorLastNameLabel": "Author last name",
   "authorLastNamePlaceholder": "Provide author's last name",
   "authorLastNameDesc": "Last name name will be displayed on the About page and under the articles",
-  "authorDescNameLabel": "Author's description",
-  "authorDescNamePlaceholder": "Provide author's description",
-  "authorDescNameDesc": "Author's description is the couple of sentences about the author that is going to be displayed only on the About page",
+  "authorDescLabel": "Author's description",
+  "authorDescPlaceholder": "Provide author's description",
+  "authorDescDesc": "Author's description is the couple of sentences about the author that is going to be displayed only on the About page",
   "certNameLabel": "Certificate name",
   "certNamePlaceholder": "Provide the name of the certificate",
   "certNameDesc": "The name/title of the certificate",
