--- a/src/assets/i18n/components/input/pl.json
+++ b/src/assets/i18n/components/input/pl.json
@@ -89,9 +89,9 @@
   "authorLastNameLabel": "Nazwisko autora",
   "authorLastNamePlaceholder": "Podaj nazwisko autora",
   "authorLastNameDesc": "Nazwisko będzie wyświetlane na stronie O mnie i pod artykułami",
-  "authorDescNameLabel": "Opis autora",
-  "authorDescNamePlaceholder": "Podaj opis autora",
-  "authorDescNameDesc": "Opis autora to kilka zdań o autorze, które będą wyświetlane tylko na stronie O mnie",
+  "authorDescLabel": "Opis autora",
+  "authorDescPlaceholder": "Podaj opis autora",
+  "authorDescDesc": "Opis autora to kilka zdań o autorze, które będą wyświetlane tylko na stronie O mnie",
   "certNameLabel": "Nazwa certyfikatu",
   "certNamePlaceholder": "Podaj nazwę certyfikatu",
   "certNameDesc": "Nazwa/tytuł certyfikatu",
