--- a/src/assets/i18n/components/input/ru.json
+++ b/src/assets/i18n/components/input/ru.json
@@ -89,9 +89,9 @@
   "authorLastNameLabel": "Фамилия автора",
   "authorLastNamePlaceholder": "Укажите фамилию автора",
   "authorLastNameDesc": "Фамилия будет отображаться на странице \"О нас\" и под статьями",
-  "authorDescNameLabel": "Описание автора",
-  "authorDescNamePlaceholder": "Укажите описание автора",
-  "authorDescNameDesc": "Описание автора — это пара предложений об авторе, которые будут отображаться только на странице \"О нас\"",
+  "authorDescLabel": "Описание автора",
+  "authorDescPlaceholder": "Укажите описание автора",
+  "authorDescDesc": "Описание автора — это пара предложений об авторе, которые будут отображаться только на странице \"О нас\"",
   "certNameLabel": "Имя сертификата",
   "certNamePlaceholder": "Укажите имя сертификата",
   "certNameDesc": "Имя/название сертификата",
