--- a/src/assets/i18n/components/button/ru.json
+++ b/src/assets/i18n/components/button/ru.json
@@ -56,7 +56,7 @@
   "deleteArticle": "Удалить статью",
   "deleteArticlePosted": "Удалить статью из опубликованных",
   "postArticle": "Опубликовать статью",
-  "closeEditMode": "Закрыть режим редактирования статьи",
+  "closeEditMode": "Закрыть режим редактирования",
   "createAuthor": "Создать автора",
   "authors": "Авторы",
   "certifications": "Сертификаты",
