--- a/src/assets/i18n/components/dropdown/pl.json
+++ b/src/assets/i18n/components/dropdown/pl.json
@@ -4,5 +4,6 @@
   "selectMfaOption": "Wybierz opcję uwierzytelniania wieloskładnikowego",
   "articlesPerPage": "Artykułów na stronę",
   "articleCategory": "Wybierz kategorię artykułu",
-  "authorsPerPage": "Autorów na stronie"
+  "authorsPerPage": "Autorów na stronie",
+  "certsPerPage": "Certyfikaty na stronę"
 }
