--- a/src/assets/i18n/components/input/ru.json
+++ b/src/assets/i18n/components/input/ru.json
@@ -109,5 +109,8 @@
   "certObtainedSkillDesc": "Нажмите пробел, чтобы добавить новый, и щелкните по существующему, чтобы удалить его",
   "authorQueryLabel": "Запрос автора",
   "authorQueryPlaceholder": "Укажите запрос автора для поиска",
-  "authorQueryDesc": "Статьи будут найдены по их названиям и описанию"
+  "authorQueryDesc": "Статьи будут найдены по их названиям и описанию",
+  "certQueryLabel": "Запрос сертификации",
+  "certQueryPlaceholder": "Укажите запрос для поиска сертификаций",
+  "certQueryDesc": "Сертификаты будут найдены по имени и описанию"
 }
