--- a/src/assets/i18n/components/dropdown/ru.json
+++ b/src/assets/i18n/components/dropdown/ru.json
@@ -4,5 +4,6 @@
   "selectMfaOption": "Выберите вариант многофакторной идентификации",
   "articlesPerPage": "Статей на странице",
   "articleCategory": "Выберите категорию статьи",
-  "authorsPerPage": "Авторов на странице"
+  "authorsPerPage": "Авторов на странице",
+  "certsPerPage": "Сертификатов на страницу"
 }
