--- a/src/assets/i18n/messages/responses/pl.json
+++ b/src/assets/i18n/messages/responses/pl.json
@@ -18,5 +18,6 @@
   "experience-deleted": "Doświadczenie zostało pomyślnie usunięte",
   "experience-updated": "Doświadczenie zostało pomyślnie zaktualizowane",
   "certification-file-uploaded": "Plik certyfikacji został pomyślnie przesłany",
-  "tag-is-already-on-the-list": "Tag jest już na liście"
+  "tag-is-already-on-the-list": "Tag jest już na liście",
+  "certification-status-updated": "Status certyfikacji został pomyślnie zaktualizowany"
 }
