--- a/src/assets/i18n/messages/responses/ru.json
+++ b/src/assets/i18n/messages/responses/ru.json
@@ -18,5 +18,6 @@
   "experience-deleted": "Опыт успешно удален",
   "experience-updated": "Опыт успешно обновлен",
   "certification-file-uploaded": "Файл сертификации успешно загружен",
-  "tag-is-already-on-the-list": "Тег уже есть в списке"
+  "tag-is-already-on-the-list": "Тег уже есть в списке",
+  "certification-status-updated": "Статус сертификации успешно обновлен"
 }
