--- a/src/assets/i18n/pages/certifications/pl.json
+++ b/src/assets/i18n/pages/certifications/pl.json
@@ -1,5 +1,11 @@
 {
   "createCertTitle": "Utwórz certyfikat",
   "certificateFileName": "Nazwa pliku certyfikatu: {{ certFileName }}",
-  "certificateFileSize": "Rozmiar pliku certyfikatu: {{ certFileSize }}MB"
+  "certificateFileSize": "Rozmiar pliku certyfikatu: {{ certFileSize }}MB",
+  "noCerts": "Nie znaleziono certyfikatów",
+  "allCertifications": "Wszystkie certyfikaty",
+  "certObtainingDate": "Data uzyskania certyfikatu: {{ certObtainingDate }}",
+  "certExpirationDate": "Data wygaśnięcia certyfikatu: {{ certExpirationDate }}",
+  "certCreatedAt": "Certyfikacja utworzona o: {{ certCreatedAt }}",
+  "certUpdatedAt": "Certyfikacja zaktualizowana o: {{ certUpdatedAt }}"
 }
