create certification page

--- a/src/assets/i18n/components/input/en.json
+++ b/src/assets/i18n/components/input/en.json
@@ -112,5 +112,23 @@
   "authorQueryDesc": "The articles will be found based on their names and description",
   "certQueryLabel": "Certification query",
   "certQueryPlaceholder": "Provide the query to find certifications",
-  "certQueryDesc": "The certifications will be found based on name and description"
+  "certQueryDesc": "The certifications will be found based on name and description",
+  "experienceCompanyNameLabel": "Company name",
+  "experienceCompanyNamePlaceholder": "Provide the name of the company",
+  "experienceCompanyNameDesc": "Company name will be displayed as the name of the placed you worked at",
+  "experienceCompanyDescLabel": "Company description",
+  "experienceCompanyDescPlaceholder": "Provide the description of the company",
+  "experienceCompanyDescDesc": "Include the description of the company along with what has been done for this company",
+  "experienceCompanyLinkLabel": "Company link",
+  "experienceCompanyLinkPlaceholder": "Provide the link to company's official web page",
+  "experienceCompanyLinkDesc": "Link will be displayed under company's description",
+  "experienceCompanyLinkTitleLabel": "Company link title",
+  "experienceCompanyLinkTitlePlaceholder": "Provide company link title",
+  "experienceCompanyLinkTitleDesc": "Link title allows to hide the link under user-friendly text",
+  "experienceStartDateLabel": "Start date",
+  "experienceStartDatePlaceholder": "Input the start date",
+  "experienceStartDateDesc": "The date when you started at this company",
+  "experienceEndDateLabel": "End date",
+  "experienceEndDatePlaceholder": "Input the end date",
+  "experienceEndDateDesc": "The date when you finished working for this company. Leave blank if you still working for this company"
 }
