--- a/src/assets/i18n/components/input/pl.json
+++ b/src/assets/i18n/components/input/pl.json
@@ -112,5 +112,23 @@
   "authorQueryDesc": "Artykuły zostaną znalezione na podstawie ich nazw i opisu",
   "certQueryLabel": "Zapytanie o certyfikację",
   "certQueryPlaceholder": "Podaj zapytanie, aby znaleźć certyfikaty",
-  "certQueryDesc": "Certyfikaty zostaną znalezione na podstawie nazwy i opisu"
+  "certQueryDesc": "Certyfikaty zostaną znalezione na podstawie nazwy i opisu",
+  "experienceCompanyNameLabel": "Nazwa firmy",
+  "experienceCompanyNamePlaceholder": "Podaj nazwę firmy",
+  "experienceCompanyNameDesc": "Nazwa firmy będzie wyświetlana jako nazwa miejsca, w którym pracowałeś",
+  "experienceCompanyDescLabel": "Opis firmy",
+  "experienceCompanyDescPlaceholder": "Podaj opis firmy",
+  "experienceCompanyDescDesc": "Dołącz opis firmy wraz z informacjami o tym, co zostało dla niej zrobione",
+  "experienceCompanyLinkLabel": "Link do firmy",
+  "experienceCompanyLinkPlaceholder": "Podaj link do oficjalnej strony internetowej firmy",
+  "experienceCompanyLinkDesc": "Link będzie wyświetlany pod opisem firmy",
+  "experienceCompanyLinkTitleLabel": "Tytuł linku do firmy",
+  "experienceCompanyLinkTitlePlaceholder": "Podaj tytuł linku do firmy",
+  "experienceCompanyLinkTitleDesc": "Tytuł linku pozwala ukryć link pod przyjaznym dla użytkownika tekstem",
+  "experienceStartDateLabel": "Data rozpoczęcia",
+  "experienceStartDatePlaceholder": "Wprowadź datę rozpoczęcia",
+  "experienceStartDateDesc": "Data rozpoczęcia pracy w tej firmie",
+  "experienceEndDateLabel": "Data zakończenia",
+  "experienceEndDatePlaceholder": "Wprowadź datę zakończenia",
+  "experienceEndDateDesc": "Data zakończenia pracy w tej firmie. Pozostaw puste, jeśli nadal pracujesz w tej firmie"
 }
