--- a/src/assets/i18n/components/input/ru.json
+++ b/src/assets/i18n/components/input/ru.json
@@ -112,5 +112,23 @@
   "authorQueryDesc": "Статьи будут найдены по их названиям и описанию",
   "certQueryLabel": "Запрос сертификации",
   "certQueryPlaceholder": "Укажите запрос для поиска сертификаций",
-  "certQueryDesc": "Сертификаты будут найдены по имени и описанию"
+  "certQueryDesc": "Сертификаты будут найдены по имени и описанию",
+  "experienceCompanyNameLabel": "Название компании",
+  "experienceCompanyNamePlaceholder": "Укажите название компании",
+  "experienceCompanyNameDesc": "Название компании будет отображаться как название места, где вы работали",
+  "experienceCompanyDescLabel": "Описание компании",
+  "experienceCompanyDescPlaceholder": "Укажите описание компании",
+  "experienceCompanyDescDesc": "Включите описание компании вместе с тем, что было сделано для этой компании",
+  "experienceCompanyLinkLabel": "Ссылка на компанию",
+  "experienceCompanyLinkPlaceholder": "Укажите ссылку на официальную веб-страницу компании",
+  "experienceCompanyLinkDesc": "Ссылка будет отображаться под описанием компании",
+  "experienceCompanyLinkTitleLabel": "Название ссылки на компанию",
+  "experienceCompanyLinkTitlePlaceholder": "Укажите компанию заголовок ссылки",
+  "experienceCompanyLinkTitleDesc": "Заголовок ссылки позволяет скрыть ссылку под удобным для пользователя текстом",
+  "experienceStartDateLabel": "Дата начала",
+  "experienceStartDatePlaceholder": "Введите дату начала",
+  "experienceStartDateDesc": "Дата, когда вы начали работать в этой компании",
+  "experienceEndDateLabel": "Дата окончания",
+  "experienceEndDatePlaceholder": "Введите дату окончания",
+  "experienceEndDateDesc": "Дата, когда вы закончили работать в этой компании. Оставьте поле пустым, если вы все еще работаете в этой компании"
 }
