--- a/src/assets/i18n/messages/responses/pl.json
+++ b/src/assets/i18n/messages/responses/pl.json
@@ -19,5 +19,8 @@
   "experience-updated": "Doświadczenie zostało pomyślnie zaktualizowane",
   "certification-file-uploaded": "Plik certyfikacji został pomyślnie przesłany",
   "tag-is-already-on-the-list": "Tag jest już na liście",
-  "certification-status-updated": "Status certyfikacji został pomyślnie zaktualizowany"
+  "certification-status-updated": "Status certyfikacji został pomyślnie zaktualizowany",
+  "experience-position-created": "Pozycja doświadczenia została pomyślnie utworzona",
+  "experience-position-deleted": "Pozycja doświadczenia została pomyślnie usunięta",
+  "experience-position-updated": "Pozycja doświadczenia została pomyślnie zaktualizowana"
 }
