--- a/src/assets/i18n/messages/responses/en.json
+++ b/src/assets/i18n/messages/responses/en.json
@@ -19,5 +19,8 @@
   "experience-updated": "Experience has been successfully updated",
   "certification-file-uploaded": "Certification file has been successfully uploaded",
   "tag-is-already-on-the-list": "Tag is already on the list",
-  "certification-status-updated": "Certification status has been successfully updated"
+  "certification-status-updated": "Certification status has been successfully updated",
+  "experience-position-created": "Experience position has been successfully created",
+  "experience-position-deleted": "Experience position has been successfully deleted",
+  "experience-position-updated": "Experience position has been successfully updated "
 }
