--- a/src/assets/i18n/messages/responses/ru.json
+++ b/src/assets/i18n/messages/responses/ru.json
@@ -19,5 +19,8 @@
   "experience-updated": "Опыт успешно обновлен",
   "certification-file-uploaded": "Файл сертификации успешно загружен",
   "tag-is-already-on-the-list": "Тег уже есть в списке",
-  "certification-status-updated": "Статус сертификации успешно обновлен"
+  "certification-status-updated": "Статус сертификации успешно обновлен",
+  "experience-position-created": "Позиция опыта успешно создана",
+  "experience-position-deleted": "Позиция опыта успешно удалена",
+  "experience-position-updated": "Позиция опыта успешно обновлена"
 }
