--- a/src/assets/i18n/pages/titles/ru.json
+++ b/src/assets/i18n/pages/titles/ru.json
@@ -20,5 +20,8 @@
   "createAuthors": "Bahdashych on Security | Создание автора",
   "certification": "Bahdashych on Security | Сертификат | {{ certName }}",
   "certifications": "Bahdashych on Security | Сертификаты",
-  "createCertification": "Bahdashych on Security | Создать сертификат"
+  "createCertification": "Bahdashych on Security | Создать сертификат",
+  "experience": "Bahdashych on Security | Опыт | {{ experienceName }}",
+  "experiences": "Bahdashych on Security | Опыт",
+  "createExperience": "Bahdashych on Security | Создать опыт"
 }
