--- a/src/assets/i18n/components/dropdown/pl.json
+++ b/src/assets/i18n/components/dropdown/pl.json
@@ -5,5 +5,6 @@
   "articlesPerPage": "Artykułów na stronę",
   "articleCategory": "Wybierz kategorię artykułu",
   "authorsPerPage": "Autorów na stronie",
-  "certsPerPage": "Certyfikaty na stronę"
+  "certsPerPage": "Certyfikaty na stronę",
+  "experiencesPerPage": "Doświadczenia na stronę"
 }
