--- a/src/assets/i18n/components/input/ru.json
+++ b/src/assets/i18n/components/input/ru.json
@@ -130,5 +130,8 @@
   "experienceStartDateDesc": "Дата, когда вы начали работать в этой компании",
   "experienceEndDateLabel": "Дата окончания",
   "experienceEndDatePlaceholder": "Введите дату окончания",
-  "experienceEndDateDesc": "Дата, когда вы закончили работать в этой компании. Оставьте поле пустым, если вы все еще работаете в этой компании"
+  "experienceEndDateDesc": "Дата, когда вы закончили работать в этой компании. Оставьте поле пустым, если вы все еще работаете в этой компании",
+  "expQueryLabel": "Запрос опыта",
+  "expQueryPlaceholder": "Укажите запрос опыта для поиска",
+  "expQueryDesc": "Опыт будет найден на основе его имени и описания"
 }
