--- a/src/assets/i18n/components/dropdown/en.json
+++ b/src/assets/i18n/components/dropdown/en.json
@@ -5,5 +5,6 @@
   "articlesPerPage": "Articles per page",
   "articleCategory": "Select article category",
   "authorsPerPage": "Authors per page",
-  "certsPerPage": "Certifications per page"
+  "certsPerPage": "Certifications per page",
+  "experiencesPerPage": "Experiences per page"
 }
