--- a/src/assets/i18n/components/dropdown/ru.json
+++ b/src/assets/i18n/components/dropdown/ru.json
@@ -5,5 +5,6 @@
   "articlesPerPage": "Статей на странице",
   "articleCategory": "Выберите категорию статьи",
   "authorsPerPage": "Авторов на странице",
-  "certsPerPage": "Сертификатов на страницу"
+  "certsPerPage": "Сертификатов на страницу",
+  "experiencesPerPage": "Опытов на страницу"
 }
