--- a/src/assets/i18n/components/input/ru.json
+++ b/src/assets/i18n/components/input/ru.json
@@ -133,5 +133,11 @@
   "experienceEndDateDesc": "Дата, когда вы закончили работать в этой компании. Оставьте поле пустым, если вы все еще работаете в этой компании",
   "expQueryLabel": "Запрос опыта",
   "expQueryPlaceholder": "Укажите запрос опыта для поиска",
-  "expQueryDesc": "Опыт будет найден на основе его имени и описания"
+  "expQueryDesc": "Опыт будет найден на основе его имени и описания",
+  "socialLinkLabel": "Социальная ссылка",
+  "socialLinkPlaceholder": "Укажите ссылку на социальную сеть",
+  "socialLinkDesc": "Укажите ссылку на ваши социальные сети",
+  "socialTitleLabel": "Заголовок социальной ссылки",
+  "socialTitlePlaceholder": "Укажите заголовок социальной ссылки",
+  "socialTitleDesc": "Укажите заголовок, под которым эта ссылка будет доступна"
 }
