--- a/src/assets/i18n/messages/responses/ru.json
+++ b/src/assets/i18n/messages/responses/ru.json
@@ -22,5 +22,8 @@
   "experience-position-created": "Позиция опыта успешно создана",
   "experience-position-deleted": "Позиция опыта успешно удалена",
   "experience-position-updated": "Позиция опыта успешно обновлена",
-  "experience-status-updated": "Статус опыта успешно обновлен"
+  "experience-status-updated": "Статус опыта успешно обновлен",
+  "social-created": "Ссылка на социальную сеть успешно создана",
+  "social-updated": "Ссылка на социальную сеть успешно обновлена",
+  "social-deleted": "Ссылка на социальную сеть успешно удалена"
 }
